@@ -7,10 +7,19 @@ JDigitalSimulator is a platform independent open source Electronic Design Automa
 
 Please download the latest release from the [releases section](https://github.com/kristian/JDigitalSimulator/releases/latest) here on GitHub. Visit the [project homepage](http://kra.lc/projects/jdigitalsimulator/) for some additional information.
 
+Run
+---
+
+To run JDigitalSimulator download the JAR file and run it with:
+```
+java -jar jds-2.x.x.jar
+```
+Note that if you are using a latest Java version (such as Java 21), it will require you to use a `--add-opens java.base/java.io=ALL-UNNAMED` to the command, in order to be able to open legacy files from JDigitalSimulator version > 1.*.
+
 Build
 -----
 
-To build `JDigitalSimulator` on your machine, checkout the repository, `cd` into it, and call:
+To build JDigitalSimulator on your machine, checkout the repository, `cd` into it, and call:
 ```
 mvn clean install
 ```
